--- a/package.json
+++ b/package.json
@@ -4,8 +4,17 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node.index",
+    "dev": "nodemon index"
   },
-  "author": "",
-  "license": "ISC"
+  "author": "Patryk Jeżowski",
+  "license": "ISC",
+  "devDependencies": {
+    "esm": "^3.2.25",
+    "nodemon": "^2.0.17"
+  },
+  "dependencies": {
+    "express": "^4.18.1"
+  }
 }
